# candle-gen

./: .gitignore  CODEGRAPH.md  Cargo.toml  README.md
candle-gen-boogu/: Cargo.toml
candle-gen-boogu/examples/: boogu-edit.rs  boogu-render.rs  boogu-txt2img.rs  render.rs
candle-gen-boogu/src/: config.rs  lib.rs  loader.rs  pipeline.rs  text_encoder.rs  tokenizer.rs
candle-gen-boogu/src/transformer/: block.rs  mod.rs  rope.rs
candle-gen-boogu/src/vision/: mod.rs  preprocess.rs
candle-gen-chroma/: Cargo.toml
candle-gen-chroma/src/: config.rs
candle-gen-clip/: Cargo.toml
candle-gen-clip/src/: lib.rs
candle-gen-depth/: Cargo.toml
candle-gen-depth/src/: backbone.rs  common.rs  config.rs  head.rs  lib.rs  neck.rs  preprocess.rs
candle-gen-depth/tests/: depth_shapes.rs
candle-gen-face/: Cargo.toml
candle-gen-face/src/: align.rs  common.rs  face.rs  iresnet.rs  lib.rs  parity.rs  scrfd.rs
candle-gen-flux/: Cargo.toml
candle-gen-flux/examples/: flux-txt2img.rs  txt2img.rs
candle-gen-flux/src/: ip_adapter.rs  ip_dit.rs  ip_image_encoder.rs  ip_provider.rs  ip_validate.rs  lib.rs  pipeline.rs
candle-gen-flux/tests/: conformance.rs
candle-gen-flux2/: Cargo.toml
candle-gen-flux2/examples/: flux2-qmm-probe.rs  flux2-te-probe.rs  flux2-txt2img.rs
candle-gen-flux2/src/: config.rs  convert.rs  edit_provider.rs  lib.rs  quant.rs  text_encoder.rs  transformer.rs  vae.rs
candle-gen-flux2/tests/: conformance.rs
candle-gen-ideogram/: Cargo.toml
candle-gen-ideogram/examples/: convert_fp8.rs  ideogram-render.rs  render.rs  render_edit.rs
candle-gen-ideogram/src/: adapters.rs  config.rs  lib.rs  loader.rs  pipeline.rs  scheduler.rs  text_encoder.rs
candle-gen-ideogram/src/transformer/: block.rs  mod.rs  model.rs  mrope.rs
candle-gen-joycaption/: Cargo.toml
candle-gen-joycaption/examples/: joycaption-caption.rs
candle-gen-joycaption/src/: language.rs  lib.rs  prompt.rs  vision.rs
candle-gen-joycaption/tests/: conformance.rs
candle-gen-kolors/: Cargo.toml
candle-gen-kolors/src/: config.rs  control.rs  control_validate.rs  lib.rs  pipeline.rs
candle-gen-krea/: Cargo.toml
candle-gen-krea/src/: adapters.rs  lib.rs  loader.rs  pipeline.rs  train_dit.rs  training.rs
candle-gen-krea/src/transformer/: mod.rs
candle-gen-krea/tests/: e2e_real_weights.rs  trainer_e2e.rs
candle-gen-lens/: Cargo.toml
candle-gen-lens/examples/: lens-render.rs
candle-gen-lens/scripts/: dump_lens_schedule_golden.py  dump_lens_vae_golden.py
candle-gen-lens/src/: lib.rs  quant.rs  schedule.rs  text_encoder.rs  training.rs  transformer.rs  vae.rs
candle-gen-lens/tests/: dit_quant_parity.rs  encoder_quant_parity.rs  schedule_parity.rs  trainer_e2e.rs  vae_parity.rs
candle-gen-ltx/: Cargo.toml
candle-gen-ltx/examples/: ltx-txt2video.rs  ltx_av_smoke.rs
candle-gen-ltx/src/: config.rs  connector.rs  conv3d.rs  gemma.rs  lib.rs  pipeline.rs  rope.rs  scheduler.rs  text_encoder.rs  transformer.rs  vae.rs
candle-gen-ltx/tests/: conformance.rs
candle-gen-prompt-refine/: Cargo.toml
candle-gen-prompt-refine/src/: lib.rs  prompt.rs
candle-gen-prompt-refine/tests/: conformance.rs
candle-gen-qwen-image/: Cargo.toml
candle-gen-qwen-image/examples/: qwen-image-txt2img.rs
candle-gen-qwen-image/src/: adapters.rs  config.rs  control.rs  control_fun.rs  control_fun_validate.rs  control_validate.rs  edit.rs  edit_validate.rs  lib.rs  pipeline.rs  rope.rs  text_encoder.rs  transformer.rs  vae.rs
candle-gen-qwen-image/tests/: conformance.rs
candle-gen-sam3/: Cargo.toml
candle-gen-sam3/src/: common.rs  config.rs  detr.rs  geometry.rs  lib.rs  mask.rs  model.rs  text.rs  tracker.rs  video.rs  vision.rs
candle-gen-sam3/tests/: e2e_parity.rs  quant_smoke.rs  text_parity.rs  vision_parity.rs
candle-gen-scail2/: Cargo.toml
candle-gen-scail2/src/: adapters.rs  clip.rs  common.rs  config.rs  lib.rs  model.rs  pipeline.rs  preprocess.rs  resize.rs  rope.rs
candle-gen-sd3/: Cargo.toml
candle-gen-sd3/examples/: sd3-txt2img.rs
candle-gen-sd3/src/: adapters.rs  clip_tokenizer.rs  conditioning.rs  config.rs  lib.rs  memory.rs  pipeline.rs  quant.rs  transformer.rs  vae.rs
candle-gen-sdxl/: Cargo.toml
candle-gen-sdxl/examples/: sdxl-txt2img.rs  txt2img.rs
candle-gen-sdxl/src/: adapters.rs  conditioning.rs  edit_provider.rs  edit_validate.rs  ip_adapter.rs  ip_provider.rs  ip_validate.rs  lib.rs  loaders.rs  pipeline.rs  sampler.rs  training.rs  vision_encoder.rs  weights.rs
candle-gen-sdxl/src/unet/: controlnet.rs  unet_2d.rs
candle-gen-sdxl/tests/: conformance.rs  trainer_e2e.rs
candle-gen-sdxl/tests/fixtures/sc3642_lokr/: linear_bothfull.expected.safetensors  linear_bothfull.safetensors  linear_bothlr.expected.safetensors  linear_bothlr.safetensors  (+2 more)
candle-gen-seedvr2/: Cargo.toml
candle-gen-seedvr2/src/: lib.rs  nn.rs  pipeline.rs  video.rs
candle-gen-seedvr2/tests/: cuda_quant_smoke.rs  cuda_smoke.rs
candle-gen-sensenova/: Cargo.toml
candle-gen-sensenova/examples/: sensenova-txt2img.rs  sensenova-understanding.rs
candle-gen-sensenova/src/: config.rs  distill.rs  fm.rs  lib.rs  qwen3.rs  t2i.rs  text.rs  vision.rs
candle-gen-sensenova/tests/: conformance.rs
candle-gen-svd/: Cargo.toml
candle-gen-svd/src/: config.rs  conv3d.rs  embeddings.rs  image_encoder.rs  lib.rs  pipeline.rs  preprocess.rs  scheduler.rs  transformer.rs  unet.rs  vae.rs
candle-gen-wan/: Cargo.toml
candle-gen-wan/examples/: vace_smoke.rs  wan14b-img2video.rs  wan14b-txt2video.rs
candle-gen-wan/src/: adapters.rs  config.rs  conv3d.rs  dit_train.rs  lib.rs  model_vace.rs  scheduler.rs  training.rs  transformer.rs  vace.rs  vae.rs  vae16.rs  wan14b.rs
candle-gen-wan/tests/: conformance_14b.rs  trainer_e2e.rs
candle-gen-z-image/: Cargo.toml
candle-gen-z-image/examples/: txt2img.rs  z-image-base-txt2img.rs  z-image-txt2img.rs
candle-gen-z-image/src/: adapters.rs  base.rs  control.rs  control_validate.rs  dit.rs  edit.rs  edit_validate.rs  lib.rs  pipeline.rs  training.rs
candle-gen-z-image/tests/: conformance.rs  trainer_conformance.rs  trainer_e2e.rs
(+16 files in other folders)
