[workspace]
members = ["candle-gen", "candle-gen-sdxl", "candle-gen-z-image", "candle-gen-flux", "candle-gen-flux2", "candle-gen-qwen-image", "candle-gen-wan", "candle-gen-scail2", "candle-gen-ltx", "candle-gen-svd", "candle-gen-joycaption", "candle-gen-lens", "candle-gen-chroma", "candle-gen-prompt-refine", "candle-gen-kolors", "candle-gen-sensenova", "candle-gen-face", "candle-gen-instantid", "candle-gen-seedvr2", "candle-gen-pulid", "candle-gen-sam3", "candle-gen-ideogram", "candle-gen-boogu", "candle-gen-clip"]
resolver = "2"

# Single source of truth for the deps shared across the workspace (mirrors mlx-gen's F-151). The
# next candle bump or gen-core pin bump is then a one-line edit here rather than N synchronized
# ones — a missed crate would otherwise resolve two distinct `sceneworks-gen-core` builds and the
# provider crate would register into one `inventory` registry while the consumer queries another
# ("engine not found" at RUNTIME, not a compile error — see scripts/check-gen-core-skew.sh).
[workspace.dependencies]
# Backend-neutral contract layer (epic 3720). lib name is `gen_core` (neutral import path). This is
# pinned by git SHA to the SAME rev the SceneWorks worker pins — do NOT drift it, or the skew gate
# fires. candle-gen is the Windows/CUDA sibling of mlx-gen; both satisfy this one contract.
# Bumped `1a97909` -> `41c95a1` (sc-5126): the worker moved its gen-core pin to `41c95a1` for the
# Bernini provider (sc-4707, mlx-gen #433 — +11 additive lines in `weightsmeta.rs`, no API removed),
# so the Lens inference cutover re-pins candle-gen to MATCH or the worker's `--features backend-candle`
# graph resolves two gen-core revs and the skew gate fires (one inventory registry per rev). candle-gen
# consumes none of the new weightsmeta surface; the bump is purely to keep the single-rev invariant.
# Bumped `41c95a1` -> `af190c7` (sc-5500): adds the additive `TextLlm` contract (mlx-gen #448) that
# `candle-gen-prompt-refine` implements. The worker re-pins to MATCH at its own cutover (sc-5525).
# Bumped `af190c7` -> `fa0f75b` (sc-5551, candle-gen #55): lockstep with the worker's mlx pin bump
# (SceneWorks #664) for the video-gen per-step cancel; gen-core additive, no candle surface change.
# Bumped `fa0f75b` -> `d3ec5e5` (sc-5552): lockstep with the worker adding the native MLX
# `mlx-gen-prompt-refine` provider (mlx-gen #457). gen-core is BYTE-IDENTICAL `fa0f75b` -> `d3ec5e5`
# (the merge only adds an mlx provider crate); the bump is purely to keep the single-rev skew invariant
# with the worker's mlx pin at its sc-5552 cutover.
# The `sceneworks-gen-core-testkit` dev-deps below are bumped in lockstep for the same reason.
# Bumped `d3ec5e5` -> `871d5cc` (sc-5490, epic 5480): the additive gen-core `FaceEmbedder` contract
# (mlx-gen PR #458, merged to main) that `candle-gen-face` implements. The worker re-pins to MATCH when
# it wires the candle InstantID/PuLID providers (sc-5491/5492); until then candle-gen leads this rev.
# Bumped `871d5cc` -> `24c89c9` (sc-5491, epic 5480): catch up to the worker's mlx-gen pin, which
# overtook candle-gen when mlx-gen #459 (sc-5637 training-preview samples) landed on main. The ONLY
# gen-core delta is `train.rs` +39 additive lines (new `TrainingConfig` sample_* fields with
# defaults + a `TrainingProgress::Sample` variant) — candle-gen has no trainers, so no surface
# change; this is purely the alignment the worker's candle lane needs to resolve ONE gen-core rev.
# Bumped `24c89c9` -> `40063d5` (sc-5491, epic 5480): the worker's mlx-gen pin moved again
# (mlx-gen #460 smokes + #461 SCAIL-2 Q4 + #462 sc-5451 SCAIL-2 inference LoRA), so re-pin in lockstep
# to keep the worker's `--features backend-candle` lane on ONE gen-core rev. gen-core is BYTE-IDENTICAL
# `24c89c9` -> `40063d5` (the range is pure mlx-gen-scail2 Rust); zero candle surface change.
# Bumped `40063d5` -> `891bee4` (sc-5700, epic 5439): the worker's mlx-gen pin moved again to catch up
# to mlx-gen main (#463 sc-5681 high-res f32/tiled decode + DiT activation chunking, #464 sc-5690 VAE
# tiling regression coverage, #465 sc-5684 SCAIL-2 lightx2v lightning diff-patch LoRA), so re-pin in
# lockstep to keep the worker's `--features backend-candle` lane on ONE gen-core rev. The gen-core delta
# `40063d5` -> `891bee4` is a SINGLE additive `tiling.rs` *test* case (the z48 vae22 combined-plan
# coverage); the public gen-core surface is BYTE-IDENTICAL → zero candle surface change.
# Bumped `32fdb34` -> `154af37` (sc-5492, epic 5480): catch up to the worker's mlx-gen pin, which
# advanced past candle-gen when the FLUX.2-dev T2I series (mlx-gen #469-#472) landed on SceneWorks
# main. The ONLY gen-core delta `32fdb34..154af37` is +27 ADDITIVE lines in `tokenizer.rs` (a new
# `ChatTemplate::Flux2DevMistral` variant + its render arm); candle-gen only CONSTRUCTS specific
# `ChatTemplate` variants (never matches exhaustively), so the addition is behavior-neutral — zero
# candle surface change. This re-pin closes the pre-existing main skew (worker mlx 154af37 vs candle
# 32fdb34, tracked as sc-5905) so the worker's `--features backend-candle` lane resolves ONE gen-core
# rev again, which the candle PuLID worker route (sc-5492) needs.
# Re-pinned `aeb471b` -> `3714e7b` (sc-5487, epic 5480): align candle-gen's gen-core pin with the
# SceneWorks worker's ACTUAL mlx-gen pin (`3714e7b` on main) for the candle SDXL edit lane's single-rev
# invariant. candle-gen #86 (sc-6038) had re-pinned to `aeb471b` AHEAD of the worker (the worker is
# still at `3714e7b`), so a worker `--features backend-candle` build pinning candle-gen main would have
# resolved TWO gen-core revs. `aeb471b` and `3714e7b` have BYTE-IDENTICAL gen-core (the `3714e7b..aeb471b`
# delta is a single additive mlx-gen-instantid commit — the sc-6038 user-LoRA merge — + mlx-rs unchanged),
# so this is a behavior-neutral rev alignment, NOT a feature revert: #86's InstantID-LoRA candle change
# stays. When sc-6038's worker PR lands (bumping the worker mlx pin to `aeb471b` together with its
# InstantId struct change), it moves both forward in lockstep.
#
# Bumped `3511476` -> `7b89d45` for the SceneWorks `ideogram_4` worker integration (mlx-gen #481):
# the worker needs mlx-gen-ideogram's packed Q4/Q8 loader (`quant.rs`/`convert.rs`, macOS-only) to
# load the published turnkey, so the worker pins mlx-gen `7b89d45`; candle-gen's gen-core must match
# under the `--target all` skew gate. gen-core is BYTE-IDENTICAL between `3511476` and `7b89d45` (the
# delta is the additive mlx-gen-ideogram quant crate; mlx-rs unchanged), so this is a behavior-neutral
# rev alignment, NOT a feature change — candle builds nothing new.
#
# Bumped `7b89d45` -> `98592bb` (sc-6217): the SceneWorks worker mlx pin advanced `7b89d45` -> `98592bb`
# (mlx-gen #485 / sc-6067, SeedVR2 image-upscale tiling) AFTER candle-gen #91, leaving the worker's
# `--features backend-candle --target all` lane resolving two gen-core revs. gen-core is BYTE-IDENTICAL
# `7b89d45` -> `98592bb` (the delta is pure mlx-gen-seedvr2 Rust; mlx-rs unchanged 44929a0), so this is a
# behavior-neutral alignment to the worker's actual mlx pin — candle builds nothing new. Closes the
# sc-5905 catch-up for this rev and lets the sc-6217 worker re-pin resolve a single gen-core rev again.
#
# Bumped `98592bb` -> `51a6792` (sc-6217 follow-up): the worker mlx pin advanced AGAIN `98592bb` ->
# `51a6792` (mlx-gen #485 merge = the common descendant of sc-6067 SeedVR2 tiling + sc-6030 FLUX.2-dev
# caption upsampling; surfaced by SceneWorks sc-6135 / #758) AFTER candle-gen #92 landed at `98592bb`,
# re-opening the candle-lane rev skew. The gen-core delta `98592bb` -> `51a6792` is DOC-ONLY (the
# sc-6030 `enhance_prompt` field comments — no contract / parity-snapshot change; mlx-rs unchanged
# 44929a0), so this is again a behavior-neutral alignment to the worker's actual mlx pin — candle builds
# nothing new. Keeps the sc-6217 worker re-pin (SceneWorks #759) resolving a SINGLE gen-core rev.
#
# Bumped `51a6792` -> `517ef11f` (sc-6247 de-skew): the worker mlx pin advanced AGAIN `51a6792` ->
# `517ef11f` (mlx-gen #490 merge, sc-6330 Ideogram-4 edit) AFTER candle-gen pinned `51a6792`, re-opening
# the candle-lane rev skew (it merged silently — the SceneWorks `--features backend-candle` lane is
# workflow_dispatch-only, NOT a PR gate, so `image_jobs/instantid.rs` mixing the two gen-core builds went
# unnoticed). The gen-core TREE is BYTE-IDENTICAL `51a6792` -> `517ef11f` (`git diff 51a6792 517ef11f --
# gen-core/` is empty — #490 is pure mlx-gen-ideogram), so this is a behavior-neutral re-alignment to the
# worker's actual mlx pin; candle builds nothing new. Unblocks the sc-6247 SceneWorks worker re-pin
# (wiring candle-gen-sam3 into the off-Mac person-track) by restoring a SINGLE gen-core rev.
# (sc-6220 / candle-gen #103 reached the SAME `517ef11f` via `51a6792` -> `e23a8b7` -> `517ef11` for the
# Qwen-Image-Edit-2511-Lightning route; this merge with #104's de-skew converges on the one target —
# byte-identical gen-core either way.)
#
# Bumped `517ef11f` -> `4740225` (sc-6346): the SceneWorks worker mlx pin advances `517ef11` ->
# `4740225` (mlx-gen #499 — the SAM3 tracker fg/bg point-prompt path for Image-Editor smart-select),
# so candle-gen's gen-core must match under the `--target all` skew gate. The gen-core TREE is
# BYTE-IDENTICAL `517ef11` -> `4740225` (#499 is pure mlx-gen-sam3/tracker.rs; mlx-rs unchanged
# 44929a0), so this is a behavior-neutral re-alignment to the worker's actual mlx pin — candle builds
# nothing new. Restores a SINGLE gen-core rev for the worker's `--features backend-candle` lane.
#
# Bumped `4740225` -> `0b86fad` (sc-6399, epic 6387): the worker's mlx pin advances to `0b86fad`
# (mlx-gen #504 — registers the Boogu-Image-0.1 Generator into the gen_core registry for the
# SceneWorks worker integration), so candle-gen's gen-core must match under the `--target all` skew
# gate. The gen-core TREE is BYTE-IDENTICAL `4740225` -> `0b86fad` (the range is pure mlx-gen-boogu —
# a Mac-only image family with no candle sibling; mlx-rs unchanged 44929a0), so this is a
# behavior-neutral re-alignment — candle builds nothing new. Restores a SINGLE gen-core rev for the
# worker's `--features backend-candle` lane.
# Bumped `0b86fad` -> `dc40c74` (mlx-gen #505, sc-3459 VACE-Fun): the SceneWorks worker's mlx pin
# advances to `dc40c74` (the native dual-expert Wan2.2 VACE-Fun engine — a Mac-only mlx-gen-wan
# addition with no candle sibling), so candle-gen's gen-core must MATCH under the worker's
# `--features backend-candle` skew gate. gen-core is BYTE-IDENTICAL `0b86fad` -> `dc40c74` (the mlx PR
# touched only mlx-gen-wan; mlx-rs unchanged 44929a0) — candle builds nothing new.
# Bumped `dc40c74` -> `4d3aa49` (mlx-gen #506, sc-6585 JSON-constrained decoding): UNLIKE the prior
# re-pins this is NOT byte-identical — gen-core adds the constrained-decoding contract
# (`json_constraint::JsonState`, `TextLlmRequest.constraint`, `TextTokenizer::constraint_decode_table`),
# and `candle-gen-prompt-refine` ACTUALLY uses it (the off-Mac twin of the magic-prompt JSON masking).
# Re-pinned in lockstep so the worker's `--features backend-candle` skew gate resolves a SINGLE gen-core
# rev (4d3aa49) shared with the mlx pin. mlx-rs unchanged 44929a0.
# Bumped `4d3aa49` -> `7b97542` (sc-7076, candle half of sc-6894): pulls the new neutral
# `gen_core::tiling::budgeted_plan` selector + `TileCandidates`/`TilingBudgetError` (mlx-gen #517) that
# candle-gen-ltx/wan now consume for memory-bounded + catchable video VAE decode. The `4d3aa49..7b97542`
# range is purely ADDITIVE gen-core (6921 dim guards, 6909 validation guards, 6894 budgeted_plan — no
# API removed), so the existing candle surface compiles unchanged. candle-gen **leads this rev**: the
# worker re-pins to MATCH at its next backend-candle cutover (normal pattern — see the bumps above);
# until then the worker's combined build would resolve two gen-core revs, so land the worker bump in
# lockstep when this merges. mlx-rs unchanged 44929a0.
# Bumped `7b97542` -> `d8038be` (epic 7114 P2 / sc-7119): pulls the new ADDITIVE unified
# sampler/scheduler framework into gen-core — `gen_core::sampling::{LatentOps, ModelSampling, Sampler,
# the curated solver/scheduler library}` (mlx-gen #525/#526/#527, sc-7115/7116/7117). sc-7119 needs the
# `LatentOps` trait to implement `CandleLatentOps` for `candle_core::Tensor`. The `7b97542..d8038be` range
# is purely additive gen-core (the sampling module grew; no API removed), so the existing candle surface
# compiles unchanged. candle-gen **leads this rev**: the worker re-pins to MATCH at its next
# backend-candle cutover (the P5 lockstep story, sc-7129). The 17 per-crate `gen-core-testkit` dev-deps
# below are bumped in lockstep so the skew gate resolves a SINGLE gen-core rev. mlx-rs unchanged 44929a0.
# Bumped `d8038be` -> `c59f73cb` (epic 7114 P4 / sc-7123): pulls the ADDITIVE flow time-shift the P3
# scheduler axis added to gen-core — `FlowModelSampling::with_shift(conv, mu)` (mlx-gen #532, sc-7120
# task 7186) — so a candle flow engine can build a curated `normal`/`sgm_uniform`/`simple`/`beta`/
# `ddim_uniform` schedule over its resolution-/config-dependent shift instead of a linear σ ramp.
# The `d8038be..c59f73cb` gen-core public-API delta is EXACTLY this one new method (verified: the rest
# of the range is mlx-gen-crate P3 adoption — the `run_curated_sampler`/`resolve_schedule` driver +
# per-engine routing — which lives in mlx-gen's own `src/sampler.rs`, NOT gen-core), so the existing
# candle surface compiles unchanged. candle-gen **leads this rev**: the worker re-pins to MATCH at the
# P5 backend-candle cutover (sc-7129). The 17 per-crate `gen-core-testkit` dev-deps are bumped in
# lockstep so the skew gate resolves a SINGLE gen-core rev. mlx-rs unchanged 44929a0.
# Bumped `c59f73cb` -> `903f295` (epic 7114 sc-7296/sc-7305 pin-bump lockstep): catch up to mlx-gen main
# after the lens curated-sampler adoption (mlx-gen #535, sc-7305) + the Wan engine-name reconcile
# (mlx-gen #536, sc-7296). gen-core is BYTE-IDENTICAL `c59f73cb..903f295` — both PRs are additive in
# their own provider crates (mlx-gen-lens / mlx-gen-wan), NOT gen-core — so the candle surface compiles
# unchanged. Pure rev-alignment so the worker's skew gate resolves ONE gen-core rev when it re-pins
# mlx-gen -> 903f295 + candle-gen -> this rev. The 17 per-crate + `sceneworks-gen-core-testkit` dev-deps
# are bumped in lockstep. mlx-rs unchanged 44929a0.
# Bumped `903f295` -> `04aa4aa` (epic 7114 sc-7432/sc-7389 pin-bump lockstep): catch up to mlx-gen main
# after the conditioned curated-sampler adoption for the bespoke families (mlx-gen #537 PuLID / #538
# InstantID / #539 Kolors, sc-7297). gen-core is BYTE-IDENTICAL `903f295..04aa4aa` (same `gen-core/`
# tree SHA `5450444` — all three PRs are additive in their own provider crates mlx-gen-{pulid,instantid,
# kolors}, NOT gen-core), so the candle surface compiles unchanged. Pure rev-alignment so the SceneWorks
# worker's skew gate resolves ONE gen-core rev when it re-pins mlx-gen -> 04aa4aa + candle-gen -> this rev
# for the sc-7432 worker integration (which threads the candle `sampler`/`scheduler` fields #130 added to
# `KolorsControlRequest` / `IpAdapterKolorsRequest` / `PulidFluxRequest` / `InstantIdRequest`). The 17
# per-crate + `sceneworks-gen-core-testkit` dev-deps are bumped in lockstep. mlx-rs unchanged 44929a0.
# Bumped `04aa4aa` -> `43aa2bf` (sc-7491, epic 7114): a REAL gen-core change this time, not a rev-align.
# gen-core gains `ModelSampling::noise_scaling_coeffs` (default VE `x0 + σ·noise`; FLOW overrides to the
# convex blend `σ·noise + (1−σ)·x0`, mirroring ComfyUI `noise_scaling`) and threads `ms` into
# `Sampler::sample` so the `lcm` consistency solver re-noises in the model's convention — fixing the flow
# `lcm` blur (Boogu Turbo on mlx, and the whole flow cohort). Non-flow `lcm` is byte-unchanged; no engine
# defaults to `lcm`, so no N1-default regression. candle mirrors the 4 `ms`-threaded `.sample` call sites
# in `candle-gen/src/sampler.rs`; the `noise_scaling_coeffs` fix is inherited from gen-core, so
# `CandleLatentOps` needs no new method. `43aa2bf` is the mlx-gen #541 MERGE commit on main (also carries
# #540's additive image-embedder contract). The SceneWorks worker re-pins mlx-gen + candle-gen to this
# rev in lockstep so the `--features backend-candle` skew gate resolves ONE gen-core rev (sc-7491 S4).
# Bumped `43aa2bf` -> `418f900` (sc-6537): a REAL gen-core change adding the backend-neutral
# `TextEmbedder` contract/registry plus the MLX CLIP-L text embedder provider. candle-gen-clip mirrors
# that provider for CUDA/Windows and the 17 per-crate `sceneworks-gen-core-testkit` dev-deps move in
# lockstep so SceneWorks resolves one gen-core rev when it pins mlx-gen + candle-gen for alignment.
sceneworks-gen-core = { git = "https://github.com/michaeltrefry/mlx-gen", rev = "54e87e995f1477176bba815814648ded1f2a65a4" }
# candle tensor backend (CPU on Mac by default; Metal under the `metal` feature; CUDA on Windows
# under the `cuda` feature). Pinned to candle git main (post-0.10.2) — REQUIRED for Blackwell
# sm_120: the crates.io 0.10.2 release fails `CUDA_ERROR_INVALID_PTX` at the first candle-kernels
# kernel the moment candle-transformers is linked (repo-wide; SDXL + z-image both; plain candle-core
# works). Rev 65ecb58 clears it — verified by the SDXL + Z-Image GPU conformance on RTX PRO 6000
# (sm_120). All three crates share ONE rev so the whole tree is one candle build. Re-pin in lockstep.
candle-core = { git = "https://github.com/huggingface/candle", rev = "65ecb58c11d2244a7e60c71bdcdb19b15b0a4343" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "65ecb58c11d2244a7e60c71bdcdb19b15b0a4343" }
# SDXL building blocks (dual CLIP, UNet2DConditionModel, VAE, schedulers) — the candle-gen-sdxl
# pipeline (sc-3675) reuses these, mirroring how the spike (epic 3494) built on candle-transformers.
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "65ecb58c11d2244a7e60c71bdcdb19b15b0a4343" }
# HF tokenizers (CLIP-L + CLIP-bigG tokenizer.json) and snapshot/file resolution for SDXL weights.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
# Fixed-algorithm CPU RNG for deterministic, launch-portable initial latent noise (sc-3673) — NOT
# candle's CUDA `set_seed`. `StdRng` (ChaCha) is reproducible across launches for a given seed;
# `rand_distr::StandardNormal` draws the N(0,1) latent. Versions match candle's own tree (no dup).
rand = "0.9"
rand_distr = "0.5"
# Link-time model registration (the DI-container stand-in) — matches gen-core's `inventory`.
inventory = "0.3"
# Error bridge (CandleError -> gen_core::Error). Major matches mlx-gen (thiserror 2).
thiserror = "2"
# JSON parsing for the PEFT/diffusers `lora_adapter_metadata` config blob (sc-5374) — the inference
# adapter merge reads `lora_alpha`/`r` (+ per-module `alpha_pattern`/`rank_pattern`) out of it when a
# file carries no per-target `.alpha` tensor. Already in the lock via `safetensors`; surfaced direct.
serde_json = "1"

# sc-7544 (epic 6564): multi-arch fatbin for candle's CUDA *quantized* kernels on Blackwell.
# candle-kernels compiles its GGUF `QMatMul`/MoE kernels into a static `libmoe.a` via `nvcc -c`
# (SASS object, NOT `--ptx`). cudaforge emits ONE `-gencode` from `CUDA_COMPUTE_CAP`, so the cap=80
# packaging baseline embeds only an sm_80 cubin — which cannot load on Blackwell sm_120, where every
# Q4/Q8 matmul then silently returns zeros (dense PTX kernels JIT up fine; this is why dense models
# render but quantized models came out black). cudaforge has no multi-target/cap-list support and the
# candle pin is upstream (huggingface/candle, not a fork), so the fix is a LOCAL fork of candle-kernels
# (`vendor/candle-kernels`, identical to the pinned rev except for three `-gencode` lines in build.rs)
# patched in here. It emits sm_80 + sm_90 + sm_120 SASS + compute_120 PTX — one binary that runs
# natively Ampere → Ada → Hopper → Blackwell and JITs forward. The patch key is the candle git URL so
# it overrides the candle-kernels that `candle-core` (above) pulls transitively from that source.
# RE-VENDOR THIS WHEN THE candle PIN BUMPS — see vendor/candle-kernels/VENDORED.md.
[patch."https://github.com/huggingface/candle"]
candle-kernels = { path = "vendor/candle-kernels" }
